ui: update icon expandable menu & bug collapse

--- a/display/styles/components/_expandable-panel.scss
+++ b/display/styles/components/_expandable-panel.scss
@@ -1,7 +1,7 @@
 .expandable-panel {
     .expansion-title {
         color: $color-primary-light;
-        font-size: 15px;
+        font-size: 17px;
     }
 
     .MuiExpansionPanelDetails-root {
