--- a/display/styles/components/_toolbox.scss
+++ b/display/styles/components/_toolbox.scss
@@ -9,6 +9,11 @@
                 padding-right: 8px;
             }
         }
-        
+        .panel-icon {
+            display: none!important;
+        }
+        .ps-menu-label{
+            display: none;
+        }
     }
 }
